# src/TeamRotator.Core/DTOs/ModifyAssignmentDto.cs
@@ -2,8 +2,5 @@ namespace TeamRotator.Core.DTOs;
 
 public class ModifyAssignmentDto
 {
-    public int TaskId { get; set; }
-    public int MemberId { get; set; }
-    public DateOnly StartDate { get; set; }
-    public DateOnly EndDate { get; set; }
+    public required string Host { get; set; }
 } 
