# src/TeamRotator.Core/DTOs/TaskAssignmentDto.cs
@@ -6,9 +6,8 @@ public class TaskAssignmentDto
 {
     public int Id { get; set; }
     public int TaskId { get; set; }
+    public required string TaskName { get; set; }
     public int MemberId { get; set; }
-    public DateOnly StartDate { get; set; }
-    public DateOnly EndDate { get; set; }
-    public required RotationTask Task { get; set; }
-    public required Member Member { get; set; }
+    public required string Host { get; set; }
+    public required string SlackId { get; set; }
 } 
